# OpenPlaceRecognition-ROS2

./: .gitignore  .gitmodules  ERRORS.md  README.md  TODO.md
docker/: build.sh  (+7 more)
open_place_recognition/: CMakeLists.txt  package.xml
open_place_recognition/configs/pipelines/: aruco_localization_pipeline.yaml  localization_pipeline.yaml  topological_localization_pipeline.yaml
open_place_recognition/configs/pipelines/place_recognition/: multimodal_pr.yaml  multimodal_semantic_pr.yaml  multimodal_semantic_with_soc_outdoor_pr.yaml  multimodal_with_soc_outdoor_pr.yaml  text_labels_pr.yaml
open_place_recognition/configs/pipelines/updated_pipelines/: aruco_localization_pipeline.yaml  localization_pipeline.yaml  multimodal_pr.yaml  multimodal_with_soc_outdoor_pr.yaml  text_labels_pr.yaml
open_place_recognition/launch/: dataset_from_bag.launch.py  dataset_from_rtabmap.launch.py  dataset_indexing.launch.py  dataset_publisher.launch.py  dataset_train.launch.py  localization.launch.py  place_recognition.launch.py  test_depth_estimation.launch.py  test_opr_odometry.launch.py  test_visualizer.launch.py
open_place_recognition/rviz/: depth_estimation_outdoor.rviz
open_place_recognition/scripts/: dataset_create.py  dataset_train.py  node_1_9_scan.pcd  read_scan copy.py  read_scan.py
open_place_recognition/src/: dataset_from_rosbag_node.py  dataset_from_rtabmap_node.py  dataset_indexing_node.py  dataset_publisher_node.py  dataset_train_node.py  localization_node.py  place_recognition_node.py  test_depth_estimation_node.py  test_opr_odom_node.py  test_visualizer_node.py
(+23 files in other folders)
